[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_pancam = "0.7.0"
rand = "0.8.5"
